// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Pure component match expected snapshot 1`] = `
<div>
  <Aesthetic-ContainerPure
    className="fixedOnTheTop-0-0"
  >
    <div
      className="header-0-2"
    >
      <Aesthetic-ColumnPure
        className="logotypeColumn-0-1"
        xs={6}
      >
        <Aesthetic-LogotypePure
          className="headerLogoContainer-0-4"
        />
      </Aesthetic-ColumnPure>
    </div>
  </Aesthetic-ContainerPure>
  <div
    className="headerPadding-0-3"
  />
</div>
`;

exports[`Header Pure component with scrolled down document since to "scrollTop: 24" match expected snapshot 1`] = `
<HeaderPure
  classNames={
    Object {
      ".header-0-2.shrinkedHeader": "header-0-2",
      ".headerLogoContainer-0-4.shrinkedHeader": "headerLogoContainer-0-4",
      "fixedOnTheTop": "fixedOnTheTop-0-0",
      "header": "header-0-2",
      "headerLogoContainer": "headerLogoContainer-0-4",
      "headerPadding": "headerPadding-0-3",
      "logotypeColumn": "logotypeColumn-0-1",
    }
  }
>
  <div>
    <Aesthetic-ContainerPure
      className="fixedOnTheTop-0-0"
    >
      <ContainerPure>
        <div
          className="header-0-2"
        >
          <Aesthetic-ColumnPure
            className="logotypeColumn-0-1"
            xs={6}
          >
            <ColumnPure>
              <Aesthetic-LogotypePure
                className="headerLogoContainer-0-4"
              >
                <LogotypePure />
              </Aesthetic-LogotypePure>
            </ColumnPure>
          </Aesthetic-ColumnPure>
        </div>
      </ContainerPure>
    </Aesthetic-ContainerPure>
    <div
      className="headerPadding-0-3"
    />
  </div>
</HeaderPure>
`;

exports[`Header Pure component with scrolled down document since to "scrollTop: 100" match expected snapshot 1`] = `
<HeaderPure
  classNames={
    Object {
      ".header-0-2.shrinkedHeader": "header-0-2",
      ".headerLogoContainer-0-4.shrinkedHeader": "headerLogoContainer-0-4",
      "fixedOnTheTop": "fixedOnTheTop-0-0",
      "header": "header-0-2",
      "headerLogoContainer": "headerLogoContainer-0-4",
      "headerPadding": "headerPadding-0-3",
      "logotypeColumn": "logotypeColumn-0-1",
    }
  }
>
  <div>
    <Aesthetic-ContainerPure
      className="fixedOnTheTop-0-0"
    >
      <ContainerPure>
        <div
          className="header-0-2 shrinkedHeader"
        >
          <Aesthetic-ColumnPure
            className="logotypeColumn-0-1"
            xs={6}
          >
            <ColumnPure>
              <Aesthetic-LogotypePure
                className="headerLogoContainer-0-4 shrinkedHeader"
              >
                <LogotypePure />
              </Aesthetic-LogotypePure>
            </ColumnPure>
          </Aesthetic-ColumnPure>
        </div>
      </ContainerPure>
    </Aesthetic-ContainerPure>
    <div
      className="headerPadding-0-3"
    />
  </div>
</HeaderPure>
`;
